book/tests/snapshots/snapshot__@transforms__filter-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter age > 25\n"
input_file: book/tests/prql/transforms/filter-0.prql
---
SELECT
  *
FROM
  employees
WHERE
  age > 25

