book/tests/snapshots/snapshot__@transforms__filter-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter (age > 25 or department != \"IT\")\n"
input_file: book/tests/prql/transforms/filter-1.prql
---
SELECT
  *
FROM
  employees
WHERE
  age > 25
  OR department <> 'IT'

