book/tests/snapshots/snapshot__@transforms__filter-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter (age | in 25..40)\n"
input_file: book/tests/prql/transforms/filter-3.prql
---
SELECT
  *
FROM
  employees
WHERE
  age BETWEEN 25 AND 40

