book/tests/snapshots/snapshot__@transforms__from-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\n"
input_file: book/tests/prql/transforms/from-0.prql
---
SELECT
  *
FROM
  employees

