book/tests/snapshots/snapshot__@transforms__from-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from e = employees\nselect e.first_name\n"
input_file: book/tests/prql/transforms/from-1.prql
---
SELECT
  first_name
FROM
  employees AS e

