book/tests/snapshots/snapshot__@transforms__group-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ngroup [title, country] (\n  aggregate [\n    average salary,\n    ct = count\n  ]\n)\n"
input_file: book/tests/prql/transforms/group-0.prql
---
SELECT
  title,
  country,
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
GROUP BY
  title,
  country

