book/tests/snapshots/snapshot__@transforms__group-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort join_date\ntake 1\n"
input_file: book/tests/prql/transforms/group-1.prql
---
SELECT
  *
FROM
  employees
ORDER BY
  join_date
LIMIT
  1

